# neon_intrinsics_exercise

./: CMakeLists.txt  benchmark.h  main.cpp  run_task.h  task_0_sum.h  task_1.h  task_calc_pi.h  task_fir.h  task_max_abs.h  task_stereo_iir.h
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/xinging/neontest/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml  CMakeLists.txt
android/app/src/main/cpp/: jni_run_benchmark.cpp
android/app/src/main/java/com/xinging/neontest/: MainActivity.java
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/xinging/neontest/: ExampleUnitTest.java
android/gradle/wrapper/: gradle-wrapper.properties
